--- a/jdk8mvn3/Dockerfile
+++ b/jdk8mvn3/Dockerfile
@@ -6,7 +6,7 @@ ENV JAVA_VERSION=8 \
     JAVA_PATH=a58eab1ec242421181065cdc37240b08 \
     JAVA_HOME="/usr/lib/jvm/default-jvm"
 
-RUN apk add --no-cache --virtual=build-dependencies wget ca-certificates unzip openssh && \
+RUN apk add --no-cache --virtual=build-dependencies wget ca-certificates unzip  && \
     cd "/tmp" && \
     wget --header "Cookie: oraclelicense=accept-securebackup-cookie;" \
         "http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION}u${JAVA_UPDATE}-b${JAVA_BUILD}/${JAVA_PATH}/jdk-${JAVA_VERSION}u${JAVA_UPDATE}-linux-x64.tar.gz" && \
@@ -56,7 +56,7 @@ RUN apk add --no-cache --virtual=build-dependencies wget ca-certificates unzip o
     apk del build-dependencies && \
     rm "/tmp/"*
 
-RUN apk add --no-cache curl tar bash procps
+RUN apk add --no-cache curl tar bash procps　openssh-client
 
 ARG MAVEN_VERSION=3.5.3
 ARG USER_HOME_DIR="/root"
