--- a/mysql/mysqld_charset.cnf
+++ b/mysql/mysqld_charset.cnf
@@ -1,7 +1,62 @@
 [mysqld]
+log-bin=mysql-bin
+binlog_format=mixed
+server-id	= 1
+default-time-zone = '+8:00'
+
+symbolic-links=0
+innodb_thread_concurrency=4
+skip-external-locking
+key_buffer_size = 8M
+max_allowed_packet = 1M
+table_open_cache = 64
+net_buffer_length = 8K
+join_buffer_size = 32M
+sort_buffer_size = 1M
+read_rnd_buffer_size = 4M
+read_buffer_size = 1M
+
 character_set_server=utf8
 character_set_filesystem=utf8
 collation-server=utf8_general_ci
 init-connect='SET NAMES utf8'
 init_connect='SET collation_connection = utf8_general_ci'
 skip-character-set-client-handshake
+
+max_connections = 1500
+max_connect_errors = 20
+back_log = 500
+open_files_limit = 65535
+interactive_timeout = 3600
+wait_timeout = 3600
+table_open_cache = 1024
+binlog_cache_size = 2M
+tmp_table_size = 32M
+max_heap_table_size = 8M
+query_cache_size = 16M
+query_cache_limit = 1M
+thread_cache_size = 64
+innodb_buffer_pool_size=2G
+innodb_log_file_size = 256M
+innodb_log_buffer_size = 4M
+innodb_log_buffer_size = 3M
+innodb_flush_log_at_trx_commit = 1
+innodb_log_files_in_group = 3
+innodb_open_files = 800
+innodb_file_per_table = 1
+innodb_write_io_threads = 8
+innodb_read_io_threads = 8
+innodb_purge_threads = 1
+innodb_max_dirty_pages_pct = 90
+innodb_lock_wait_timeout = 120
+innodb_strict_mode=1
+innodb_large_prefix = on
+[mysqldump]
+quick
+default-character-set = utf8mb4
+max_allowed_packet = 16M
+
+[mysql]
+auto-rehash
+default-character-set = utf8mb4
+
