--- a/mysql/mysqld_charset.cnf
+++ b/mysql/mysqld_charset.cnf
@@ -16,10 +16,10 @@ sort_buffer_size = 1M
 read_rnd_buffer_size = 4M
 read_buffer_size = 1M
 
-character_set_server=utf8
+character_set_server=utf8mb4
 character_set_filesystem=utf8
 collation-server=utf8_general_ci
-init-connect='SET NAMES utf8'
+init-connect='SET NAMES utf8mb4'
 init_connect='SET collation_connection = utf8_general_ci'
 skip-character-set-client-handshake
 
